added history logs on sqlite
